--- a/Index.html
+++ b/Index.html
@@ -194,6 +194,44 @@ int main() {
 }
             </code></pre>
     </div>
+             <h4>Lab 9: C++ Program for multipple inheritance </h4>
+        <div class="code-container">
+             ass="copy-button" onclick="copyCode('lab8')">Copy Code</button>
+            <pre id="lab8"><code>
+#include<iostream>
+using namespace std;
+
+class Vehicle {
+public:
+    void vehicle() {
+        cout << "I am a Vehicle" << endl;
+    }
+};
+
+class FourWheeler : public Vehicle {
+public:
+    void fourwheeler() {
+        cout << "I have four wheels " << endl;
+    }
+};
+
+class Car : public FourWheeler {
+public:
+    void car() {
+        cout << "I am a car" << endl;
+    }
+};
+
+int main() {
+    Car mycar;
+    mycar.car();
+    mycar.fourwheeler(); // Now accessible because Car inherits from FourWheeler
+    mycar.vehicle();     // Accessible through the inheritance chain
+    return 0;
+}
+            
+            </code></pre>
+         </div>
     <script>
         function copyCode(id) {
             var code = document.getElementById(id).innerText;
